[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_af74n"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_af74n")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.07, 0.1, 0.14, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuPanel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(340, 0)
layout_mode = 2

[node name="MenuMargin" type="MarginContainer" parent="CenterContainer/MenuPanel"]
layout_mode = 2
theme_override_constants/margin_left = 18
theme_override_constants/margin_top = 18
theme_override_constants/margin_right = 18
theme_override_constants/margin_bottom = 18

[node name="MenuButtons" type="VBoxContainer" parent="CenterContainer/MenuPanel/MenuMargin"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="CenterContainer/MenuPanel/MenuMargin/MenuButtons"]
layout_mode = 2
text = "Octotest"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 46

[node name="Subtitle" type="Label" parent="CenterContainer/MenuPanel/MenuMargin/MenuButtons"]
layout_mode = 2
text = "Prototype Demo"
horizontal_alignment = 1
modulate = Color(0.85, 0.89, 0.93, 0.82)

[node name="Spacer" type="Control" parent="CenterContainer/MenuPanel/MenuMargin/MenuButtons"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="PlayButton" type="Button" parent="CenterContainer/MenuPanel/MenuMargin/MenuButtons"]
custom_minimum_size = Vector2(0, 46)
layout_mode = 2
text = "Play"

[node name="QuitButton" type="Button" parent="CenterContainer/MenuPanel/MenuMargin/MenuButtons"]
custom_minimum_size = Vector2(0, 46)
layout_mode = 2
text = "Quit"
